--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
         <div class="col-xs-12 col-sm-3 headerNavBtn" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">ユーザーを探す</a>
           <ul class="dropdown-menu dropdown-menu-right">
-            <li class="dropdown-item"><%= link_to 'タグから探す', posts_path %></li>
+            <li class="dropdown-item"><%= link_to 'タグから探す', tags_path %></li>
             <li class="dropdown-item"><%= link_to 'つぶやきから探す', posts_path %></li>
           </ul>
         </div>
