--- a/app/views/layouts/_navbar_login.html.erb
+++ b/app/views/layouts/_navbar_login.html.erb
@@ -4,7 +4,7 @@
       <a href="<%= posts_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
         つぶやき一覧
       </a>
-      <a href="<%= posts_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
+      <a href="<%= tags_path %>" class="col-xs-12 col-sm-3 headerNavBtn">
          タグ一覧
       </a>
       
